# openai-local-bridge

./: .gitignore  .openai_to_upstream.py  README.md  README_CN.md  install.ps1  install.sh  olb_cli.py  olb_i18n.py  openai-local-bridge.bat  openai-local-bridge.ps1  openai-local-bridge.sh  openai_local_bridge.py  package.json  pyproject.toml
.github/release-notes/: v0.3.0.md  v0.3.1.md  v0.4.0.md
.github/workflows/: publish-npm-from-main.yml  release-binaries.yml
npm/: i18n.js  install.js  olb.js  platforms.json
scripts/: package_binary.py  release_common.py
tests/: test_npm_install.cjs  test_npm_launcher.cjs  test_olb_cli.py  test_openai_local_bridge.py  test_release_scripts.py
